--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "turbo": "^2.3.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
