--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
+    "https-proxy-agent": "^7.0.5",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
@@ -57,6 +58,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
     "redis": "^4.7.0",
+    "request-promise": "^4.2.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -68,6 +70,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/request-promise": "^4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "turbo": "^2.3.1",
